<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.AddFilmFragment"
    android:clickable="true"
    android:focusable="true"
    android:background="@color/white">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_new_film"
        android:textSize="36sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/et_film_name"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/et_film_name"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:hint="@string/film_name"
        android:layout_marginTop="64dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/et_year"
        app:layout_constraintVertical_chainStyle="packed"/>

    <EditText
        android:id="@+id/et_year"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:hint="@string/year"
        android:inputType="number"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/et_film_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/et_desc" />

    <EditText
        android:id="@+id/et_desc"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/et_year"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btn_submit" />

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/et_desc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>