<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.FilmPageFragment"
    android:clickable="true"
    android:focusable="true"
    android:background="@color/white">

    <TextView
        android:id="@+id/tv_film_name"
        android:layout_width="196dp"
        android:layout_height="wrap_content"
        android:text="@string/film_name"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginStart="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_year"
        app:layout_constraintBottom_toTopOf="@+id/tv_desc"
        app:layout_constraintHorizontal_chainStyle="spread_inside" />

    <TextView
        android:id="@+id/tv_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/year_sample"
        android:textSize="24sp"
        android:textStyle="italic"
        android:layout_marginEnd="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_film_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tv_desc" />

    <TextView
        android:id="@+id/tv_desc"
        android:layout_width="364dp"
        android:layout_height="wrap_content"
        android:text="@string/film_desc_example"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/tv_film_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/seekbar_rate" />


    <TextView
        android:id="@+id/tv_sb_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        app:layout_constraintBottom_toTopOf="@+id/btn_submit"
        app:layout_constraintEnd_toStartOf="@id/seekbar_rate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_desc"
        app:layout_constraintHorizontal_chainStyle="packed"/>

    <SeekBar
        android:id="@+id/seekbar_rate"
        android:layout_width="200dp"
        android:layout_height="24dp"
        android:max="10"
        app:layout_constraintBottom_toTopOf="@+id/btn_submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_sb_value"
        app:layout_constraintTop_toBottomOf="@+id/tv_desc" />

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        app:layout_constraintTop_toBottomOf="@id/seekbar_rate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_avg_rating"/>
    <TextView
        android:id="@+id/tv_avg_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/avg_rating_example"
        android:layout_marginBottom="256dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_submit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>