<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.FilmsFragment"
    android:clickable="true"
    android:focusable="true"
    android:background="@color/white">

    <Button
        android:id="@+id/btn_add_new_film"
        android:layout_width="172dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/add_new_film"
        app:layout_constraintBottom_toTopOf="@+id/rv_favorites"
        app:layout_constraintEnd_toStartOf="@+id/btn_profile"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_profile"
        android:layout_width="172dp"
        android:layout_height="wrap_content"
        android:text="@string/to_profile"
        android:layout_marginEnd="12dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_add_new_film"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/rv_favorites"
        app:layout_constraintVertical_chainStyle="packed"/>

    <TextView
        android:id="@+id/tv_no_films"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_films"
        android:visibility="visible"
        android:textSize="28sp"
        app:layout_constraintTop_toBottomOf="@+id/btn_add_new_film"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_favorites"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toTopOf="@id/btn_add_new_film"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/spinner_filter" />

    <Spinner
        android:id="@+id/spinner_filter"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintBottom_toTopOf="@+id/rv_films"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.075"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rv_favorites"
        android:entries="@array/filter_options"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_films"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/spinner_filter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>